[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/player_sprite_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/player_behavior.gd" type="Script" id=2]
[ext_resource path="res://Sprites/strength_bar_frame.png" type="Texture" id=3]
[ext_resource path="res://Sprites/strength_bar.png" type="Texture" id=4]
[ext_resource path="res://Sprites/shadow.png" type="Texture" id=5]
[ext_resource path="res://Sounds/player_throw.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="player_sprites" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "prepare_throw_2"
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="snowball_create_point_1" type="Position2D" parent="."]
position = Vector2( -12, -16 )

[node name="snowball_create_point_2" type="Position2D" parent="."]
position = Vector2( 12, -16 )

[node name="snowball_direction_point_1" type="Position2D" parent="."]
position = Vector2( -12, -20 )

[node name="snowball_direction_point_2" type="Position2D" parent="."]
position = Vector2( 12, -20 )

[node name="strength_bar" type="TextureProgress" parent="."]
margin_left = -21.0
margin_top = -16.0
margin_right = -17.0
margin_bottom = 16.0
max_value = 30.0
value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 14 )
z_index = -1
texture = ExtResource( 5 )

[node name="throw_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="animation_finished" from="player_sprites" to="." method="animation_finished"]
